:bug: support Graphics on CentOS

--- a/dockerfiles/centos6_ocaml4.00.1/Dockerfile
+++ b/dockerfiles/centos6_ocaml4.00.1/Dockerfile
@@ -5,8 +5,8 @@ ENV OCAML_VERSION 4.00.1
 ENV HOME          /home/opam
 
 RUN yum update -y && \
-    yum install -y sudo patch unzip make libx11 \
-                   libx11-devel gcc && \
+    yum install -y sudo patch unzip make libX11 \
+                   libX11-devel gcc && \
     yum clean all && \
     \
     adduser --home-dir $HOME --shell /bin/bash opam && \
@@ -20,9 +20,7 @@ RUN yum update -y && \
     find $HOME/.opam -regex '.*\\.\\(cmt\\|cmti\\|annot\\|byte\\)' -delete && \
     rm -rf $HOME/.opam/archives \
            $HOME/.opam/repo/default/archives \
-           $HOME/.opam/$OCAML_VERSION/build && \
-    \
-    yum remove -y libx11-devel
+           $HOME/.opam/$OCAML_VERSION/build
 
 USER opam
 WORKDIR $HOME
