--- a/dockerfiles/centos6_ocaml4.06.0/Dockerfile
+++ b/dockerfiles/centos6_ocaml4.06.0/Dockerfile
@@ -5,8 +5,7 @@ ENV OCAML_VERSION 4.06.0+trunk
 ENV HOME          /home/opam
 
 RUN yum update -y && \
-    yum install -y sudo patch unzip make libX11 \
-                   libX11-devel gcc && \
+    yum install -y sudo patch unzip make gcc libX11-devel && \
     yum clean all && \
     \
     adduser --home-dir $HOME --shell /bin/bash opam && \
@@ -17,9 +16,12 @@ RUN yum update -y && \
     chmod 755 /usr/bin/opam && \
     su opam -c "opam init -a -y --comp $OCAML_VERSION" && \
     \
-    find $HOME/.opam -regex '.*\\.\\(cmt\\|cmti\\|annot\\|byte\\)' -delete && \
+    find $HOME/.opam -regex '.*\.\(cmt\|cmti\|annot\|byte\)' -delete && \
     rm -rf $HOME/.opam/archives \
+           $HOME/.opam/repo/default/compilers \
+           $HOME/.opam/repo/default/packages \
            $HOME/.opam/repo/default/archives \
+           $HOME/.opam/$OCAML_VERSION/man \
            $HOME/.opam/$OCAML_VERSION/build
 
 USER opam
