--- a/dockerfiles/debian8_ocaml4.05.0/Dockerfile
+++ b/dockerfiles/debian8_ocaml4.05.0/Dockerfile
@@ -6,8 +6,7 @@ ENV HOME          /home/opam
 
 RUN apt-get update && \
     apt-get upgrade -y && \
-    apt-get install -y sudo patch unzip make libx11-6 \
-                       curl gcc libx11-dev && \
+    apt-get install -y sudo patch unzip curl make gcc libx11-dev && \
     \
     adduser --disabled-password --home $HOME --shell /bin/bash --gecos '' opam && \
     \
@@ -16,12 +15,14 @@ RUN apt-get update && \
     chmod 755 /usr/bin/opam && \
     su opam -c "opam init -a -y --comp $OCAML_VERSION" && \
     \
-    find $HOME/.opam -regex '.*\\.\\(cmt\\|cmti\\|annot\\|byte\\)' -delete && \
+    find $HOME/.opam -regex '.*\.\(cmt\|cmti\|annot\|byte\)' -delete && \
     rm -rf $HOME/.opam/archives \
+           $HOME/.opam/repo/default/compilers \
+           $HOME/.opam/repo/default/packages \
            $HOME/.opam/repo/default/archives \
+           $HOME/.opam/$OCAML_VERSION/man \
            $HOME/.opam/$OCAML_VERSION/build && \
     \
-    apt-get purge -y curl libx11-dev && \
     apt-get autoremove -y && \
     apt-get autoclean
 
