--- a/dockerfiles/centos6_ocaml4.06.0/Dockerfile
+++ b/dockerfiles/centos6_ocaml4.06.0/Dockerfile
@@ -1,7 +1,7 @@
 FROM centos:6
 
 ENV OPAM_VERSION  1.2.2
-ENV OCAML_VERSION 4.06.0+trunk
+ENV OCAML_VERSION 4.06.0
 ENV HOME          /home/opam
 
 RUN yum update -y && \
