:sparkles: use Docker arg for CentOS

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,24 @@ env:
     - BASE=alpine:3.5 OPAM=1.2.2 OCAML=4.02.3       TAGS='alpine3.5_ocaml4.02.3 alpine_ocaml4.02.3 4.02.3'
     - BASE=alpine:3.5 OPAM=1.2.2 OCAML=4.01.0       TAGS='alpine3.5_ocaml4.03.0 alpine_ocaml4.01.0 4.01.0'
     - BASE=alpine:3.5 OPAM=1.2.2 OCAML=4.00.1       TAGS='alpine3.5_ocaml4.00.1 alpine_ocaml4.00.1 4.00.1'
+    - BASE=centos:7   OPAM=1.2.2 OCAML=4.07.0+trunk TAGS='centos7_ocaml4.07.0 centos_ocaml4.07.0'
+    - BASE=centos:7   OPAM=1.2.2 OCAML=4.06.1       TAGS='centos7_ocaml4.06.1 centos_ocaml4.06.1'
+    - BASE=centos:7   OPAM=1.2.2 OCAML=4.06.0       TAGS='centos7_ocaml4.06.0 centos_ocaml4.06.0'
+    - BASE=centos:7   OPAM=1.2.2 OCAML=4.05.0       TAGS='centos7_ocaml4.05.0 centos_ocaml4.05.0'
+    - BASE=centos:7   OPAM=1.2.2 OCAML=4.04.2       TAGS='centos7_ocaml4.04.2 centos_ocaml4.04.2'
+    - BASE=centos:7   OPAM=1.2.2 OCAML=4.03.0       TAGS='centos7_ocaml4.03.0 centos_ocaml4.03.0'
+    - BASE=centos:7   OPAM=1.2.2 OCAML=4.02.3       TAGS='centos7_ocaml4.02.3 centos_ocaml4.02.3'
+    - BASE=centos:7   OPAM=1.2.2 OCAML=4.01.0       TAGS='centos7_ocaml4.03.0 centos_ocaml4.01.0'
+    - BASE=centos:7   OPAM=1.2.2 OCAML=4.00.1       TAGS='centos7_ocaml4.00.1 centos_ocaml4.00.1'
+    - BASE=centos:6   OPAM=1.2.2 OCAML=4.07.0+trunk TAGS='centos6_ocaml4.07.0'
+    - BASE=centos:6   OPAM=1.2.2 OCAML=4.06.1       TAGS='centos6_ocaml4.06.1'
+    - BASE=centos:6   OPAM=1.2.2 OCAML=4.06.0       TAGS='centos6_ocaml4.06.0'
+    - BASE=centos:6   OPAM=1.2.2 OCAML=4.05.0       TAGS='centos6_ocaml4.05.0'
+    - BASE=centos:6   OPAM=1.2.2 OCAML=4.04.2       TAGS='centos6_ocaml4.04.2'
+    - BASE=centos:6   OPAM=1.2.2 OCAML=4.03.0       TAGS='centos6_ocaml4.03.0'
+    - BASE=centos:6   OPAM=1.2.2 OCAML=4.02.3       TAGS='centos6_ocaml4.02.3'
+    - BASE=centos:6   OPAM=1.2.2 OCAML=4.01.0       TAGS='centos6_ocaml4.03.0'
+    - BASE=centos:6   OPAM=1.2.2 OCAML=4.00.1       TAGS='centos6_ocaml4.00.1'
     # - TAG=centos7_ocaml4.07.0     OS=centos:7     OPAM=1.2.2 OCAML=4.07.0+trunk ALIAS='centos_ocaml4.07.0'
     # - TAG=centos7_ocaml4.06.1     OS=centos:7     OPAM=1.2.2 OCAML=4.06.1+trunk ALIAS='centos_ocaml4.06.1'
     # - TAG=centos7_ocaml4.06.0     OS=centos:7     OPAM=1.2.2 OCAML=4.06.0       ALIAS='centos_ocaml4.06.0'
@@ -28,15 +46,6 @@ env:
     # - TAG=centos7_ocaml4.02.3     OS=centos:7     OPAM=1.2.2 OCAML=4.02.3       ALIAS='centos_ocaml4.02.3'
     # - TAG=centos7_ocaml4.01.0     OS=centos:7     OPAM=1.2.2 OCAML=4.01.0       ALIAS='centos_ocaml4.01.0'
     # - TAG=centos7_ocaml4.00.1     OS=centos:7     OPAM=1.2.2 OCAML=4.00.1       ALIAS='centos_ocaml4.00.1'
-    # - TAG=centos6_ocaml4.07.0     OS=centos:6     OPAM=1.2.2 OCAML=4.07.0+trunk ALIAS=''
-    # - TAG=centos6_ocaml4.06.1     OS=centos:6     OPAM=1.2.2 OCAML=4.06.1+trunk ALIAS=''
-    # - TAG=centos6_ocaml4.06.0     OS=centos:6     OPAM=1.2.2 OCAML=4.06.0       ALIAS=''
-    # - TAG=centos6_ocaml4.05.0     OS=centos:6     OPAM=1.2.2 OCAML=4.05.0       ALIAS=''
-    # - TAG=centos6_ocaml4.04.2     OS=centos:6     OPAM=1.2.2 OCAML=4.04.2       ALIAS=''
-    # - TAG=centos6_ocaml4.03.0     OS=centos:6     OPAM=1.2.2 OCAML=4.03.0       ALIAS=''
-    # - TAG=centos6_ocaml4.02.3     OS=centos:6     OPAM=1.2.2 OCAML=4.02.3       ALIAS=''
-    # - TAG=centos6_ocaml4.01.0     OS=centos:6     OPAM=1.2.2 OCAML=4.01.0       ALIAS=''
-    # - TAG=centos6_ocaml4.00.1     OS=centos:6     OPAM=1.2.2 OCAML=4.00.1       ALIAS=''
     # - TAG=debian8_ocaml4.07.0     OS=debian:8     OPAM=1.2.2 OCAML=4.07.0+trunk ALIAS='debian_ocaml4.07.0'
     # - TAG=debian8_ocaml4.06.1     OS=debian:8     OPAM=1.2.2 OCAML=4.06.1+trunk ALIAS='debian_ocaml4.06.1'
     # - TAG=debian8_ocaml4.06.0     OS=debian:8     OPAM=1.2.2 OCAML=4.06.0       ALIAS='debian_ocaml4.06.0'
