--- a/dockerfiles/centos/Dockerfile
+++ b/dockerfiles/centos/Dockerfile
@@ -1,20 +1,25 @@
-FROM centos:7
+ARG BASE_TAG
+FROM centos:$BASE_TAG
 
+ARG OCAML_VERSION
 ENV OPAM_VERSION  1.2.2
-ENV OCAML_VERSION 4.04.2
+ENV OCAML_VERSION $OCAML_VERSION
 ENV HOME          /home/opam
 
+# Install dependencies
 RUN yum update -y && \
     yum install -y sudo patch unzip make gcc libX11-devel && \
-    yum clean all && \
-    \
-    adduser --home-dir $HOME --shell /bin/bash opam && \
+    yum clean all
+
+# Install OPAM
+RUN adduser --home-dir $HOME --shell /bin/bash opam && \
     passwd -d opam && \
-    \
     echo 'opam ALL=(ALL) NOPASSWD:ALL' >>/etc/sudoers && \
     curl -L -o /usr/bin/opam "https://github.com/ocaml/opam/releases/download/$OPAM_VERSION/opam-$OPAM_VERSION-$(uname -m)-$(uname -s)" && \
-    chmod 755 /usr/bin/opam && \
-    su opam -c "opam init -a -y --comp $OCAML_VERSION" && \
+    chmod 755 /usr/bin/opam
+
+# Install OCaml with X11 Graphics module
+RUN su opam -c "opam init -a -y --comp $OCAML_VERSION" && \
     \
     find $HOME/.opam -regex '.*\.\(cmt\|cmti\|annot\|byte\)' -delete && \
     rm -rf $HOME/.opam/archives \
@@ -25,4 +30,4 @@ RUN yum update -y && \
 USER opam
 WORKDIR $HOME
 ENTRYPOINT [ "opam", "config", "exec", "--" ]
-CMD [ "bash" ]
+CMD [ "/bin/bash" ]
