--- a/.travis.yml
+++ b/.travis.yml
@@ -37,24 +37,15 @@ env:
     - BASE=centos:6   OPAM=1.2.2 OCAML=4.02.3       TAGS='centos6_ocaml4.02.3'
     - BASE=centos:6   OPAM=1.2.2 OCAML=4.01.0       TAGS='centos6_ocaml4.03.0'
     - BASE=centos:6   OPAM=1.2.2 OCAML=4.00.1       TAGS='centos6_ocaml4.00.1'
-    # - TAG=centos7_ocaml4.07.0     OS=centos:7     OPAM=1.2.2 OCAML=4.07.0+trunk ALIAS='centos_ocaml4.07.0'
-    # - TAG=centos7_ocaml4.06.1     OS=centos:7     OPAM=1.2.2 OCAML=4.06.1+trunk ALIAS='centos_ocaml4.06.1'
-    # - TAG=centos7_ocaml4.06.0     OS=centos:7     OPAM=1.2.2 OCAML=4.06.0       ALIAS='centos_ocaml4.06.0'
-    # - TAG=centos7_ocaml4.05.0     OS=centos:7     OPAM=1.2.2 OCAML=4.05.0       ALIAS='centos_ocaml4.05.0'
-    # - TAG=centos7_ocaml4.04.2     OS=centos:7     OPAM=1.2.2 OCAML=4.04.2       ALIAS='centos_ocaml4.04.2'
-    # - TAG=centos7_ocaml4.03.0     OS=centos:7     OPAM=1.2.2 OCAML=4.03.0       ALIAS='centos_ocaml4.03.0'
-    # - TAG=centos7_ocaml4.02.3     OS=centos:7     OPAM=1.2.2 OCAML=4.02.3       ALIAS='centos_ocaml4.02.3'
-    # - TAG=centos7_ocaml4.01.0     OS=centos:7     OPAM=1.2.2 OCAML=4.01.0       ALIAS='centos_ocaml4.01.0'
-    # - TAG=centos7_ocaml4.00.1     OS=centos:7     OPAM=1.2.2 OCAML=4.00.1       ALIAS='centos_ocaml4.00.1'
-    # - TAG=debian8_ocaml4.07.0     OS=debian:8     OPAM=1.2.2 OCAML=4.07.0+trunk ALIAS='debian_ocaml4.07.0'
-    # - TAG=debian8_ocaml4.06.1     OS=debian:8     OPAM=1.2.2 OCAML=4.06.1+trunk ALIAS='debian_ocaml4.06.1'
-    # - TAG=debian8_ocaml4.06.0     OS=debian:8     OPAM=1.2.2 OCAML=4.06.0       ALIAS='debian_ocaml4.06.0'
-    # - TAG=debian8_ocaml4.05.0     OS=debian:8     OPAM=1.2.2 OCAML=4.05.0       ALIAS='debian_ocaml4.05.0'
-    # - TAG=debian8_ocaml4.04.2     OS=debian:8     OPAM=1.2.2 OCAML=4.04.2       ALIAS='debian_ocaml4.04.2'
-    # - TAG=debian8_ocaml4.03.0     OS=debian:8     OPAM=1.2.2 OCAML=4.03.0       ALIAS='debian_ocaml4.03.0'
-    # - TAG=debian8_ocaml4.02.3     OS=debian:8     OPAM=1.2.2 OCAML=4.02.3       ALIAS='debian_ocaml4.02.3'
-    # - TAG=debian8_ocaml4.01.0     OS=debian:8     OPAM=1.2.2 OCAML=4.01.0       ALIAS='debian_ocaml4.01.0'
-    # - TAG=debian8_ocaml4.00.1     OS=debian:8     OPAM=1.2.2 OCAML=4.00.1       ALIAS='debian_ocaml4.00.1'
+    - BASE=debian:8   OPAM=1.2.2 OCAML=4.07.0+trunk TAGS='debian8_ocaml4.07.0 debian_ocaml4.07.0'
+    - BASE=debian:8   OPAM=1.2.2 OCAML=4.06.1       TAGS='debian8_ocaml4.06.1 debian_ocaml4.06.1'
+    - BASE=debian:8   OPAM=1.2.2 OCAML=4.06.0       TAGS='debian8_ocaml4.06.0 debian_ocaml4.06.0'
+    - BASE=debian:8   OPAM=1.2.2 OCAML=4.05.0       TAGS='debian8_ocaml4.05.0 debian_ocaml4.05.0'
+    - BASE=debian:8   OPAM=1.2.2 OCAML=4.04.2       TAGS='debian8_ocaml4.04.2 debian_ocaml4.04.2'
+    - BASE=debian:8   OPAM=1.2.2 OCAML=4.03.0       TAGS='debian8_ocaml4.03.0 debian_ocaml4.03.0'
+    - BASE=debian:8   OPAM=1.2.2 OCAML=4.02.3       TAGS='debian8_ocaml4.02.3 debian_ocaml4.02.3'
+    - BASE=debian:8   OPAM=1.2.2 OCAML=4.01.0       TAGS='debian8_ocaml4.03.0 debian_ocaml4.01.0'
+    - BASE=debian:8   OPAM=1.2.2 OCAML=4.00.1       TAGS='debian8_ocaml4.00.1 debian_ocaml4.00.1'
     # - TAG=ubuntu16.04_ocaml4.07.0 OS=ubuntu:16.04 OPAM=1.2.2 OCAML=4.07.0+trunk ALIAS='ubuntu_ocaml4.07.0'
     # - TAG=ubuntu16.04_ocaml4.06.1 OS=ubuntu:16.04 OPAM=1.2.2 OCAML=4.06.1+trunk ALIAS='ubuntu_ocaml4.06.1'
     # - TAG=ubuntu16.04_ocaml4.06.0 OS=ubuntu:16.04 OPAM=1.2.2 OCAML=4.06.0       ALIAS='ubuntu_ocaml4.06.0'
