:sparkles: use Docker arg for Ubuntu Dockerfile

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,15 +46,15 @@ env:
     - BASE=debian:8   OPAM=1.2.2 OCAML=4.02.3       TAGS='debian8_ocaml4.02.3 debian_ocaml4.02.3'
     - BASE=debian:8   OPAM=1.2.2 OCAML=4.01.0       TAGS='debian8_ocaml4.03.0 debian_ocaml4.01.0'
     - BASE=debian:8   OPAM=1.2.2 OCAML=4.00.1       TAGS='debian8_ocaml4.00.1 debian_ocaml4.00.1'
-    # - TAG=ubuntu16.04_ocaml4.07.0 OS=ubuntu:16.04 OPAM=1.2.2 OCAML=4.07.0+trunk ALIAS='ubuntu_ocaml4.07.0'
-    # - TAG=ubuntu16.04_ocaml4.06.1 OS=ubuntu:16.04 OPAM=1.2.2 OCAML=4.06.1+trunk ALIAS='ubuntu_ocaml4.06.1'
-    # - TAG=ubuntu16.04_ocaml4.06.0 OS=ubuntu:16.04 OPAM=1.2.2 OCAML=4.06.0       ALIAS='ubuntu_ocaml4.06.0'
-    # - TAG=ubuntu16.04_ocaml4.05.0 OS=ubuntu:16.04 OPAM=1.2.2 OCAML=4.05.0       ALIAS='ubuntu_ocaml4.05.0'
-    # - TAG=ubuntu16.04_ocaml4.04.2 OS=ubuntu:16.04 OPAM=1.2.2 OCAML=4.04.2       ALIAS='ubuntu_ocaml4.04.2'
-    # - TAG=ubuntu16.04_ocaml4.03.0 OS=ubuntu:16.04 OPAM=1.2.2 OCAML=4.03.0       ALIAS='ubuntu_ocaml4.03.0'
-    # - TAG=ubuntu16.04_ocaml4.02.3 OS=ubuntu:16.04 OPAM=1.2.2 OCAML=4.02.3       ALIAS='ubuntu_ocaml4.02.3'
-    # - TAG=ubuntu16.04_ocaml4.01.0 OS=ubuntu:16.04 OPAM=1.2.2 OCAML=4.01.0       ALIAS='ubuntu_ocaml4.01.0'
-    # - TAG=ubuntu16.04_ocaml4.00.1 OS=ubuntu:16.04 OPAM=1.2.2 OCAML=4.00.1       ALIAS='ubuntu_ocaml4.00.1'
+    - BASE=ubuntu:16.04 OPAM=1.2.2 OCAML=4.07.0+trunk TAGS='ubuntu16.04_ocaml4.07.0 ubuntu_ocaml4.07.0'
+    - BASE=ubuntu:16.04 OPAM=1.2.2 OCAML=4.06.1       TAGS='ubuntu16.04_ocaml4.06.1 ubuntu_ocaml4.06.1'
+    - BASE=ubuntu:16.04 OPAM=1.2.2 OCAML=4.06.0       TAGS='ubuntu16.04_ocaml4.06.0 ubuntu_ocaml4.06.0'
+    - BASE=ubuntu:16.04 OPAM=1.2.2 OCAML=4.05.0       TAGS='ubuntu16.04_ocaml4.05.0 ubuntu_ocaml4.05.0'
+    - BASE=ubuntu:16.04 OPAM=1.2.2 OCAML=4.04.2       TAGS='ubuntu16.04_ocaml4.04.2 ubuntu_ocaml4.04.2'
+    - BASE=ubuntu:16.04 OPAM=1.2.2 OCAML=4.03.0       TAGS='ubuntu16.04_ocaml4.03.0 ubuntu_ocaml4.03.0'
+    - BASE=ubuntu:16.04 OPAM=1.2.2 OCAML=4.02.3       TAGS='ubuntu16.04_ocaml4.02.3 ubuntu_ocaml4.02.3'
+    - BASE=ubuntu:16.04 OPAM=1.2.2 OCAML=4.01.0       TAGS='ubuntu16.04_ocaml4.03.0 ubuntu_ocaml4.01.0'
+    - BASE=ubuntu:16.04 OPAM=1.2.2 OCAML=4.00.1       TAGS='ubuntu16.04_ocaml4.00.1 ubuntu_ocaml4.00.1'
 
 script:
   - bash -eu travis-ci.sh
