:up: upgrade 4.07.0+trunk to 4.07.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ services:
 
 matrix:
   include:
-    - env: BASE=alpine:3.5   OPAM=1.2.2 OCAML=4.07.0+trunk TAGS='alpine3.5_ocaml4.07.0 alpine_ocaml4.07.0 4.07.0'
+    - env: BASE=alpine:3.5   OPAM=1.2.2 OCAML=4.07.0       TAGS='alpine3.5_ocaml4.07.0 alpine_ocaml4.07.0 4.07.0'
     - env: BASE=alpine:3.5   OPAM=1.2.2 OCAML=4.06.1       TAGS='alpine3.5_ocaml4.06.1 alpine_ocaml4.06.1 4.06.1'
     - env: BASE=alpine:3.5   OPAM=1.2.2 OCAML=4.06.0       TAGS='alpine3.5_ocaml4.06.0 alpine_ocaml4.06.0 4.06.0'
     - env: BASE=alpine:3.5   OPAM=1.2.2 OCAML=4.05.0       TAGS='alpine3.5_ocaml4.05.0 alpine_ocaml4.05.0 4.05.0'
@@ -19,7 +19,7 @@ matrix:
     - env: BASE=alpine:3.5   OPAM=1.2.2 OCAML=4.02.3       TAGS='alpine3.5_ocaml4.02.3 alpine_ocaml4.02.3 4.02.3'
     - env: BASE=alpine:3.5   OPAM=1.2.2 OCAML=4.01.0       TAGS='alpine3.5_ocaml4.03.0 alpine_ocaml4.01.0 4.01.0'
     - env: BASE=alpine:3.5   OPAM=1.2.2 OCAML=4.00.1       TAGS='alpine3.5_ocaml4.00.1 alpine_ocaml4.00.1 4.00.1'
-    - env: BASE=centos:7     OPAM=1.2.2 OCAML=4.07.0+trunk TAGS='centos7_ocaml4.07.0 centos_ocaml4.07.0'
+    - env: BASE=centos:7     OPAM=1.2.2 OCAML=4.07.0       TAGS='centos7_ocaml4.07.0 centos_ocaml4.07.0'
     - env: BASE=centos:7     OPAM=1.2.2 OCAML=4.06.1       TAGS='centos7_ocaml4.06.1 centos_ocaml4.06.1'
     - env: BASE=centos:7     OPAM=1.2.2 OCAML=4.06.0       TAGS='centos7_ocaml4.06.0 centos_ocaml4.06.0'
     - env: BASE=centos:7     OPAM=1.2.2 OCAML=4.05.0       TAGS='centos7_ocaml4.05.0 centos_ocaml4.05.0'
@@ -28,7 +28,7 @@ matrix:
     - env: BASE=centos:7     OPAM=1.2.2 OCAML=4.02.3       TAGS='centos7_ocaml4.02.3 centos_ocaml4.02.3'
     - env: BASE=centos:7     OPAM=1.2.2 OCAML=4.01.0       TAGS='centos7_ocaml4.03.0 centos_ocaml4.01.0'
     - env: BASE=centos:7     OPAM=1.2.2 OCAML=4.00.1       TAGS='centos7_ocaml4.00.1 centos_ocaml4.00.1'
-    - env: BASE=centos:6     OPAM=1.2.2 OCAML=4.07.0+trunk TAGS='centos6_ocaml4.07.0'
+    - env: BASE=centos:6     OPAM=1.2.2 OCAML=4.07.0       TAGS='centos6_ocaml4.07.0'
     - env: BASE=centos:6     OPAM=1.2.2 OCAML=4.06.1       TAGS='centos6_ocaml4.06.1'
     - env: BASE=centos:6     OPAM=1.2.2 OCAML=4.06.0       TAGS='centos6_ocaml4.06.0'
     - env: BASE=centos:6     OPAM=1.2.2 OCAML=4.05.0       TAGS='centos6_ocaml4.05.0'
@@ -37,7 +37,7 @@ matrix:
     - env: BASE=centos:6     OPAM=1.2.2 OCAML=4.02.3       TAGS='centos6_ocaml4.02.3'
     - env: BASE=centos:6     OPAM=1.2.2 OCAML=4.01.0       TAGS='centos6_ocaml4.03.0'
     - env: BASE=centos:6     OPAM=1.2.2 OCAML=4.00.1       TAGS='centos6_ocaml4.00.1'
-    - env: BASE=debian:8     OPAM=1.2.2 OCAML=4.07.0+trunk TAGS='debian8_ocaml4.07.0 debian_ocaml4.07.0'
+    - env: BASE=debian:8     OPAM=1.2.2 OCAML=4.07.0       TAGS='debian8_ocaml4.07.0 debian_ocaml4.07.0'
     - env: BASE=debian:8     OPAM=1.2.2 OCAML=4.06.1       TAGS='debian8_ocaml4.06.1 debian_ocaml4.06.1'
     - env: BASE=debian:8     OPAM=1.2.2 OCAML=4.06.0       TAGS='debian8_ocaml4.06.0 debian_ocaml4.06.0'
     - env: BASE=debian:8     OPAM=1.2.2 OCAML=4.05.0       TAGS='debian8_ocaml4.05.0 debian_ocaml4.05.0'
@@ -46,7 +46,7 @@ matrix:
     - env: BASE=debian:8     OPAM=1.2.2 OCAML=4.02.3       TAGS='debian8_ocaml4.02.3 debian_ocaml4.02.3'
     - env: BASE=debian:8     OPAM=1.2.2 OCAML=4.01.0       TAGS='debian8_ocaml4.03.0 debian_ocaml4.01.0'
     - env: BASE=debian:8     OPAM=1.2.2 OCAML=4.00.1       TAGS='debian8_ocaml4.00.1 debian_ocaml4.00.1'
-    - env: BASE=ubuntu:16.04 OPAM=1.2.2 OCAML=4.07.0+trunk TAGS='ubuntu16.04_ocaml4.07.0 ubuntu_ocaml4.07.0'
+    - env: BASE=ubuntu:16.04 OPAM=1.2.2 OCAML=4.07.0       TAGS='ubuntu16.04_ocaml4.07.0 ubuntu_ocaml4.07.0'
     - env: BASE=ubuntu:16.04 OPAM=1.2.2 OCAML=4.06.1       TAGS='ubuntu16.04_ocaml4.06.1 ubuntu_ocaml4.06.1'
     - env: BASE=ubuntu:16.04 OPAM=1.2.2 OCAML=4.06.0       TAGS='ubuntu16.04_ocaml4.06.0 ubuntu_ocaml4.06.0'
     - env: BASE=ubuntu:16.04 OPAM=1.2.2 OCAML=4.05.0       TAGS='ubuntu16.04_ocaml4.05.0 ubuntu_ocaml4.05.0'
