--- a/.travis.yml
+++ b/.travis.yml
@@ -18,22 +18,22 @@ matrix:
     - env: BASE=alpine:latest OCAML=4.02.3       TAGS='ocaml4.02.3 alpine_ocaml4.02.3 4.02.3'
     - env: BASE=alpine:latest OCAML=4.01.0       TAGS='ocaml4.03.0 alpine_ocaml4.01.0 4.01.0'
     - env: BASE=alpine:latest OCAML=4.00.1       TAGS='ocaml4.00.1 alpine_ocaml4.00.1 4.00.1'
-    - env: BASE=centos:7     OPAM=1.2.2 OCAML=4.07.0       TAGS='centos7_ocaml4.07.0 centos_ocaml4.07.0'
-    - env: BASE=centos:7     OPAM=1.2.2 OCAML=4.06.1       TAGS='centos7_ocaml4.06.1 centos_ocaml4.06.1'
-    - env: BASE=centos:7     OPAM=1.2.2 OCAML=4.05.0       TAGS='centos7_ocaml4.05.0 centos_ocaml4.05.0'
-    - env: BASE=centos:7     OPAM=1.2.2 OCAML=4.04.2       TAGS='centos7_ocaml4.04.2 centos_ocaml4.04.2'
-    - env: BASE=centos:7     OPAM=1.2.2 OCAML=4.03.0       TAGS='centos7_ocaml4.03.0 centos_ocaml4.03.0'
-    - env: BASE=centos:7     OPAM=1.2.2 OCAML=4.02.3       TAGS='centos7_ocaml4.02.3 centos_ocaml4.02.3'
-    - env: BASE=centos:7     OPAM=1.2.2 OCAML=4.01.0       TAGS='centos7_ocaml4.03.0 centos_ocaml4.01.0'
-    - env: BASE=centos:7     OPAM=1.2.2 OCAML=4.00.1       TAGS='centos7_ocaml4.00.1 centos_ocaml4.00.1'
-    - env: BASE=centos:6     OPAM=1.2.2 OCAML=4.07.0       TAGS='centos6_ocaml4.07.0'
-    - env: BASE=centos:6     OPAM=1.2.2 OCAML=4.06.1       TAGS='centos6_ocaml4.06.1'
-    - env: BASE=centos:6     OPAM=1.2.2 OCAML=4.05.0       TAGS='centos6_ocaml4.05.0'
-    - env: BASE=centos:6     OPAM=1.2.2 OCAML=4.04.2       TAGS='centos6_ocaml4.04.2'
-    - env: BASE=centos:6     OPAM=1.2.2 OCAML=4.03.0       TAGS='centos6_ocaml4.03.0'
-    - env: BASE=centos:6     OPAM=1.2.2 OCAML=4.02.3       TAGS='centos6_ocaml4.02.3'
-    - env: BASE=centos:6     OPAM=1.2.2 OCAML=4.01.0       TAGS='centos6_ocaml4.03.0'
-    - env: BASE=centos:6     OPAM=1.2.2 OCAML=4.00.1       TAGS='centos6_ocaml4.00.1'
+    - env: BASE=centos:7      OCAML=4.07.0       TAGS='centos7_ocaml4.07.0 centos_ocaml4.07.0'
+    - env: BASE=centos:7      OCAML=4.06.1       TAGS='centos7_ocaml4.06.1 centos_ocaml4.06.1'
+    - env: BASE=centos:7      OCAML=4.05.0       TAGS='centos7_ocaml4.05.0 centos_ocaml4.05.0'
+    - env: BASE=centos:7      OCAML=4.04.2       TAGS='centos7_ocaml4.04.2 centos_ocaml4.04.2'
+    - env: BASE=centos:7      OCAML=4.03.0       TAGS='centos7_ocaml4.03.0 centos_ocaml4.03.0'
+    - env: BASE=centos:7      OCAML=4.02.3       TAGS='centos7_ocaml4.02.3 centos_ocaml4.02.3'
+    - env: BASE=centos:7      OCAML=4.01.0       TAGS='centos7_ocaml4.03.0 centos_ocaml4.01.0'
+    - env: BASE=centos:7      OCAML=4.00.1       TAGS='centos7_ocaml4.00.1 centos_ocaml4.00.1'
+    - env: BASE=centos:6      OCAML=4.07.0       TAGS='centos6_ocaml4.07.0'
+    - env: BASE=centos:6      OCAML=4.06.1       TAGS='centos6_ocaml4.06.1'
+    - env: BASE=centos:6      OCAML=4.05.0       TAGS='centos6_ocaml4.05.0'
+    - env: BASE=centos:6      OCAML=4.04.2       TAGS='centos6_ocaml4.04.2'
+    - env: BASE=centos:6      OCAML=4.03.0       TAGS='centos6_ocaml4.03.0'
+    - env: BASE=centos:6      OCAML=4.02.3       TAGS='centos6_ocaml4.02.3'
+    - env: BASE=centos:6      OCAML=4.01.0       TAGS='centos6_ocaml4.03.0'
+    - env: BASE=centos:6      OCAML=4.00.1       TAGS='centos6_ocaml4.00.1'
     - env: BASE=debian:8     OPAM=1.2.2 OCAML=4.07.0       TAGS='debian8_ocaml4.07.0 debian_ocaml4.07.0'
     - env: BASE=debian:8     OPAM=1.2.2 OCAML=4.06.1       TAGS='debian8_ocaml4.06.1 debian_ocaml4.06.1'
     - env: BASE=debian:8     OPAM=1.2.2 OCAML=4.05.0       TAGS='debian8_ocaml4.05.0 debian_ocaml4.05.0'
